--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+  max-width: 30%;
+}
+
+.return_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 3%;
+}
+
+.return_div h1 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #000;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.return_div input {
+  width: 80%;
+  height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px 10px;
+  margin: 0 0 30px 0;
+  font-size: 18px;
+}
+
+.return_div input::placeholder {
+  outline: none;
+  color: rgb(188, 0, 0);
+}
+
+.return_div input:focus {
+  outline: none;
+  border: 1px solid #FDBB2D;
 }
