--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,30 @@
 body {
-  margin: 0;
-  background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+  background: rgb(120, 161, 245);
+  background: linear-gradient(180deg, rgba(120, 161, 245, 1) 0%, rgba(97, 125, 212, 1) 20%, rgba(78, 99, 194, 1) 40%, rgba(60, 68, 162, 1) 60%, rgba(32, 26, 113, 1) 80%, rgba(23, 3, 65, 1) 100%);
+  background-repeat: no-repeat;
   font-family: 'Josefin Sans', sans-serif;
 }
 
-img {
-  max-width: 20%;
-}
+
 
 .return_div {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 3%;
+  margin-top: 7%;
+}
+
+.return_div div a {
+  text-decoration: none;
 }
 
 .return_div h1 {
   font-size: 2.5rem;
   font-weight: 600;
-  color: #000;
-  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  font-family: "Consolas";
+  margin-bottom: 6.5%;
 }
 
 .return_div input {
@@ -41,4 +45,190 @@ img {
 .return_div input:focus {
   outline: none;
   border: 1px solid #FDBB2D;
+}
+
+.return_box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.loading_text {
+  font-family: "Consolas";
+  color: #fff;
+  margin: 5% 0;
+}
+
+.loading_animation {
+  margin-bottom: 4%;
+}
+
+
+.box {
+  width: 250px;
+  height: auto;
+  margin: 1%;
+  border-radius: 10px;
+
+
+  background: rgb(120, 161, 245);
+  background: linear-gradient(0deg, rgba(120, 161, 245, 1) 0%, rgba(97, 125, 212, 1) 20%, rgba(78, 99, 194, 1) 40%, rgba(60, 68, 162, 1) 60%, rgba(32, 26, 113, 1) 80%, rgba(23, 3, 65, 1) 100%);
+}
+
+.img_div {
+  width: 250px;
+  height: 376px;
+}
+
+.img_div img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.box_info {
+  width: auto;
+  height: auto;
+  padding: 10px;
+}
+
+.box_content div {
+  margin: 10px;
+  font-family: "Consolas";
+}
+
+
+
+
+
+
+
+
+
+* {
+  border: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --hue: 223;
+  --bg: hsl(var(--hue), 10%, 90%);
+  --fg: hsl(var(--hue), 10%, 10%);
+  font-size: calc(16px + (24 - 16) * (100vw - 320px) / (1280 - 320));
+}
+
+body {
+  background-color: var(--bg);
+  color: var(--fg);
+  height: auto;
+  display: grid;
+  place-items: center;
+  transition: background-color 0.3s;
+}
+
+main {
+  padding: 1.5em 0;
+}
+
+.pl,
+.pl__worm {
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+.pl {
+  animation-name: bump;
+  animation-timing-function: linear;
+  width: 8em;
+  height: 8em;
+}
+
+.pl__ring {
+  stroke: hsla(var(--hue), 10%, 10%, 0.1);
+  transition: stroke 0.3s;
+}
+
+.pl__worm {
+  animation-name: worm;
+  animation-timing-function: cubic-bezier(0.42, 0.17, 0.75, 0.83);
+}
+
+/* Dark theme */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: hsl(var(--hue), 10%, 10%);
+    --fg: hsl(var(--hue), 10%, 90%);
+  }
+
+  .pl__ring {
+    stroke: hsla(var(--hue), 10%, 90%, 0.1);
+  }
+}
+
+/* Animations */
+@keyframes bump {
+
+  from,
+  42%,
+  46%,
+  51%,
+  55%,
+  59%,
+  63%,
+  67%,
+  71%,
+  74%,
+  78%,
+  81%,
+  85%,
+  88%,
+  92%,
+  to {
+    transform: translate(0, 0);
+  }
+
+  44% {
+    transform: translate(1.33%, 6.75%);
+  }
+
+  53% {
+    transform: translate(-16.67%, -0.54%);
+  }
+
+  61% {
+    transform: translate(3.66%, -2.46%);
+  }
+
+  69% {
+    transform: translate(-0.59%, 15.27%);
+  }
+
+  76% {
+    transform: translate(-1.92%, -4.68%);
+  }
+
+  83% {
+    transform: translate(9.38%, 0.96%);
+  }
+
+  90% {
+    transform: translate(-4.55%, 1.98%);
+  }
+}
+
+@keyframes worm {
+  from {
+    stroke-dashoffset: 10;
+  }
+
+  25% {
+    stroke-dashoffset: 295;
+  }
+
+  to {
+    stroke-dashoffset: 1165;
+  }
 }
