--- a/src/index.css
+++ b/src/index.css
@@ -156,11 +156,19 @@ body {
   font-size: 2rem;
   font-weight: 600;
   font-family: var(--primaryFont);
-  color: var(--primaryWhite);
+
+  color: var(--primaryBg);
   margin-bottom: 6.5%;
 }
 
-.sidebar_btn {
+.sidebar_list h2 a {
+  color: white;
+  text-decoration: none;
+
+}
+
+
+/* .sidebar_btn {
   margin: 40px 0 0 0;
 }
 
@@ -173,7 +181,6 @@ body {
   width: 97%;
   height: 40px;
   margin: 10px 0 0 8px;
-  /* padding: 0 0 0 15px; */
 
   font-size: 1rem;
   font-family: var(--primaryFont);
@@ -193,22 +200,10 @@ body {
   background-color: var(--primaryBg);
 }
 
-.side-link {
-  width: 97%;
-  height: 40px;
-  margin: 8px 0 0 8px;
-  padding: 0 0 0 15px;
-  color: var(--primaryBg);
-  text-decoration: none;
-}
 
-.side-link:hover {
-  color: var(--primaryWhite);
-  transition: 0.3s;
-}
+*/
 
 
-/*
 .sidebar_list ul {
   margin: 40px 0 0 0;
 }
@@ -218,33 +213,66 @@ body {
   justify-content: start;
   align-items: center;
 
-  width: 97%;
-  height: 40px;
+  /* width: 97%;
+  height: 40px; */
   margin: 10px 0 0 8px;
   padding: 0 0 0 15px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 
-  border-radius: 10px;
   color: var(--primaryBg);
   background-color: var(--secondaryWhite);
 
+  font-family: var(--primaryFont);
   font-size: 1rem;
   font-weight: 400;
 
+  text-decoration: none;
   cursor: pointer;
 }
 
-.sidebar_list li:hover {
+.sidebar_list ul li:hover {
   color: var(--primaryWhite);
-  background-color: var(--primaryBg);
+  background-color: gray;
   transition: 0.3s;
 }
 
-.sidebar_list li.active {
+/* .sidebar_list ul li:active {
   color: var(--primaryWhite);
   background-color: var(--primaryBg);
   transition: 0.4s;
   outline: none;
 } */
+
+.side-link {
+  width: 97%;
+  height: 40px;
+  margin: 0 0 0 8px;
+  padding: 8px 0 0 25px;
+
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+
+  font-size: 1.1rem;
+  font-family: var(--primaryFont);
+  color: var(--primaryBg);
+  text-decoration: none;
+}
+
+
+.side-link:hover {
+  color: var(--primaryWhite);
+  background-color: var(--primaryBg);
+  transition: 0.3s;
+}
+
+.side-link:active {
+  color: var(--primaryWhite);
+  background-color: var(--primaryBg);
+}
+
+
+
 
 /* ~ Navbar */
 
@@ -406,13 +434,19 @@ body {
   height: auto;
   margin: 1%;
   border-radius: 10px;
-  background-color: var(--secondaryWhite);
+  background-color: var(--accentBg);
 }
 
 .box_content div {
-  font-size: 15px;
+  font-family: var(--primaryFont);
+  font-size: 1rem;
   padding: 0;
   margin: 0;
+}
+
+.box_content .title {
+  font-size: 1.1rem;
+  font-weight: 700;
 }
 
 .img_div {
@@ -577,6 +611,7 @@ body {
 }
 
 .mp_ml_box_content {
+  color: var(--secondaryBg);
   font-family: var(--primaryFont);
   padding: 10px 10px;
 }
@@ -603,4 +638,108 @@ body {
 .mp_ml_img_div img {
   width: 100%;
   height: auto;
+}
+
+/* ~ Contact us */
+
+.contact__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 80vh;
+
+  background-color: var(--secondaryBg);
+
+}
+
+.contact__container__left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  width: 35%;
+  height: 100%;
+}
+
+.contact__container__left__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 2rem;
+  font-family: var(--primaryFont);
+  color: var(--accentBg);
+
+  margin: 80px;
+
+  width: 100%;
+  height: 20%;
+}
+
+.contact__container__left__logo a{
+  color: var(--accentBg);
+  text-decoration: none;
+}
+
+.contact__container__left__text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 1.5rem;
+  font-family: var(--primaryFont);
+  color: var(--accentBg);
+
+  width: 100%;
+  height: 20%;
+}
+
+.contact__container__left__text a {
+  color: var(--accentBg);
+  text-decoration: none;
+}
+
+
+.contact__container__right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  margin: 0 0 0 80px;
+  /* width: 35%; */
+  height: 100%;
+}
+
+.contact__container__right__text {
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  /* font-size: 1rem; */
+  font-family: var(--primaryFont);
+  color: var(--primaryWhite);
+
+  width: 100%;
+  /* height: 20%; */
+}
+
+.contact__container__right__text h2 {
+  margin-top: 60px;
+}
+
+/* .contact__container__right__text h2:nth-child(1) {
+  margin-top: 0;
+} */
+
+.contact__container__right__text h2 a {
+  color: var(--accentBg);
+}
+
+.contact__container__right__text h2 a:nth-child(2) {
+  text-decoration: none;
 }
