--- a/src/index.css
+++ b/src/index.css
@@ -441,6 +441,28 @@ body {
   margin-bottom: 4%;
 }
 
+@media screen and (max-width: 850px) {
+  .return_div {
+    margin-top: 10%;
+  }
+
+  .all_movies_title a h1 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .return_div {
+    margin-top: 10%;
+  }
+
+  .all_movies_title a h1 {
+    font-size: 1.5rem;
+  }
+}
+
+
+
 /* ~ Result - All Movies */
 .return_box {
   width: 90%;
@@ -582,7 +604,52 @@ body {
   }
 }
 
-@media screen and (max-width: 1310px) {}
+@media screen and (max-width: 600px) {
+  .watch_today_movies {
+    width: 250px;
+    height: 520px;
+  }
+
+  .mp_wt_box {
+    width: 250px;
+    height: 520px;
+  }
+
+  .watch_today_poste {
+    margin-bottom: 50px;
+  }
+
+  .navbar_list ul li:nth-child(3) {
+    display: none;
+  }
+
+  .watch_today_text {
+    font-size: 1rem;
+  }
+
+  .sidebar_hidden_logo {
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .watch_today_movies {
+    width: 200px;
+    height: 450px;
+  }
+
+  .mp_wt_box {
+    width: 200px;
+    height: 470px;
+  }
+
+  /* .most_liked_movies {
+    width: 200px;
+    height: 470px;
+  }
+ */
+
+}
 
 
 
@@ -691,6 +758,24 @@ body {
     height: 750px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .most_liked_movies {
+    width: 200px;
+    height: 470px;
+  }
+}
+
+@media screen and (max-width: 500px) {}
+
+@media screen and (max-width: 430px) {
+  html {
+    width: 110%;
+  }
+
+}
+
+
 
 /* ~ Most Liked page */
 .ml_page_wrapper {}
@@ -1142,6 +1227,75 @@ body {
   font-family: var(--primaryFont);
   color: var(--secondaryWhite);
 }
+
+@media screen and (max-width: 1100px) {
+  .movie_details {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 100px 30px 70px;
+    flex-direction: column;
+  }
+
+  .movie_details_img {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .movie_details_img img {
+    width: 250px;
+    height: 400px;
+  }
+
+  .movie_details_content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    margin: 0 0 0 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* .movie_details_content .title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: var(--primaryFont);
+    color: var(--accentBg);
+
+    margin-bottom: 70px;
+  } */
+
+  /* .movie_details_content .rating {
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: var(--primaryFont);
+    color: var(--secondaryWhite);
+
+    margin-bottom: 30px;
+  } */
+
+  /* .movie_details_content .relDate {
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: var(--primaryFont);
+    color: var(--secondaryWhite);
+
+    margin-bottom: 70px;
+  } */
+
+  /* .movie_details_content .overview {
+    font-size: 1rem;
+    font-weight: 400;
+    font-family: var(--primaryFont);
+    color: var(--secondaryWhite);
+  } */
+}
+
 
 /* ~ Seat Booking */
 .seat_booking {
